
add_subdirectory(bzip2)
add_subdirectory(database)
add_subdirectory(dbclib)
add_subdirectory(detour)
add_subdirectory(g3dlite)
add_subdirectory(network)
add_subdirectory(pcre)
add_subdirectory(recast)
add_subdirectory(stormlib)
add_subdirectory(threading)
add_subdirectory(vmaplib)
add_subdirectory(zlib)
